SET(PROJECT_NAME VolumeReconstruction)

PROJECT(${PROJECT_NAME})

FIND_PACKAGE(VTK REQUIRED parallel)
INCLUDE(${VTK_USE_FILE})

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS}
	${VTK_INCLUDE_DIRS}
)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(SRCS_BKOEM 
	VolumeReconstruction_test.cxx 
)

ADD_LIBRARY(${PROJECT_NAME} ${SRCS_BKOEM})

TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}
	${OpenCV_LIBS}
	${VTK_LIBRARIES}

)

ADD_EXECUTABLE(${PROJECT_NAME}_TEST VolumeReconstruction_test.cxx)
TARGET_LINK_LIBRARIES(
	${PROJECT_NAME}_TEST
	${PROJECT_NAME}
)

#SET_PROPERTY(TARGET ${PROJECT_NAME} PROPERTY FOLDER "lib")
#SET_PROPERTY(TARGET ${PROJECT_NAME}_TEST PROPERTY FOLDER "Unit Test")
